--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Compressed Styles -->
     <link href="css/slides.min.css?521351" rel="stylesheet" type="text/css">
     
-
+    <link rel="shortcut icon" href="assets/img/logo1.png" type="text/css" />
     
     <!-- Fonts and Material Icons -->
     <link rel="stylesheet" as="font" href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Material+Icons&display=swap"/>
