add twitter and discord link

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
     <div class="left"><a href="#" title="Slides Framework"><img style="width:280px;height:80px" src="assets/img/logo.png"></img></a></div>
     <div class="right">
       <ul class="menu">
-        <li><a href="#">Twitter</a></li>
-        <li><a href="#">Discord</a></li>
+        <li><a href="https://twitter.com/MetaserveDAO">Twitter</a></li>
+        <li><a href="https://discord.com/invite/H7rKjdamKA">Discord</a></li>
         <li><a href="#">Docs</a></li>
       </ul>
       <a class="button blue rounded small" href="#"><b>Coming soon</b></a>
@@ -145,9 +145,9 @@
       <li><a href="#">Contact Us</a></li>
     </ul> -->
     <ul class="social opacity-8">
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
-      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
+      <li><a href="https://twitter.com/MetaserveDAO"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
+      <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
     </ul>
   </div>
 </nav>
