remove discord link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div class="right">
       <ul class="menu">
         <li><a href="https://twitter.com/MetaserveDAO">Twitter</a></li>
-        <li><a href="https://discord.com/invite/H7rKjdamKA">Discord</a></li>
+        <li><a href="#">Discord</a></li>
         <li><a href="#">Docs</a></li>
       </ul>
       <a class="button blue rounded small" href="#"><b>Coming soon</b></a>
